# WebApp

./: .env.template  .gitignore  DockerFile  Dockerfile  LICENSE.md  pyproject.toml  requirement.txt  requirement_dev.txt  requirements.txt  setup.cfg  setup_server.sh  setup_server_docker.sh  setup_server_venv.sh
src/MachineLearning/: Infer.py
src/MachineLearning/Models/: LeNet_5.py
src/MachineLearning/dataLoaders/: InferLoader.py
src/MachineLearning/utils/: helpermethods.py
src/app/: dependencies.py  main.py  run.py
src/app/config/: database.py  env.py  templates.py
src/app/controllers/: auth_controller.py  home_controller.py  user_controller.py
src/app/middlewares/: cors_middleware.py
src/app/models/: image_model.py  infer_model.py  login_model.py  user.py  user_model.py
src/app/routes/: auth_routes.py  home_routes.py  user_routes.py
src/app/static/css/: aboutUs.css  font-awesome.min.css  home.css  index.css  inference.css  myaccount.css  pricing.css  register.css  signin.css
src/app/static/img/favicons/: manifest.json
src/app/static/js/: auth-check.js  bootstrap.bundle.min.js  cardsManager.js  checkout.js  login-auth-check.js  login.js  logout.js  myaccount.js  pricing.js  register.js  setUserInfos.js  setname.js
src/app/templates/: aboutUs.html  checkout.html  gallery.html  head.html  header.html  home.html  home2.html  index.html  inference.html  myaccount.html  pricing.html  register.html  signin.html
src/app/utils/: helpermethodsWeb.py
