[metadata]
name = WebApp
version = 0.0.1
description = Web interface for the Imagenette2Challenge
author = Hadrien Tramoni
author_email = tramonihadrien@gmail.com
url = https://github.com/HadrienT/WebApp
licence = MIT
platforms = win32
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = 
    app
    controllers
    models
    config
install_requires =
    uvicorn >= 0.15.0
    fastapi >= 0.70.0
    Jinja2 >= 3.0.2
    python-multipart >= 0.0.5
    pymongo >= 3.1.0
    PyJWT >= 2.6.0
    passlib >= 1.7.4
    python-dotenv >= 1.0.0
    pydantic >= 1.8.2
    pydantic[email] >= 1.3.1
    bcrypt >= 3.2.0
python_requires = >=3.10
package_dir =
    app = src/app
    controllers = src/controllers
    models = src/models
    config = src/config
zip_safe = False

[option.extra_require]
testing = 
    pytest >= 6.2.5
    pytest-cov >= 3.0.0
    pytest-html >= 3.1.1
    mypy >= 0.910
    flake8 >= 4.0.1
    tox >= 3.24.4
    autopep8 >= 1.6.0

[options.package_data]
* = py.typed

[flake8]
max-line-length = 160
exclude = .*, __*

[tool.autopep8]
max_line_length = 160
