[metadata]
name = WebApp
version = 0.0.1
description = Web interface for the Imagenette2Challenge
author = Hadrien Tramoni
author_email = tramonihadrien@gmail.com
url = https://github.com/HadrienT/WebApp
licence = MIT
platforms = win32
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = 
    app
    controllers
    models
    config
    MachineLearning
install_requires =
    uvicorn >= 0.20.0
    fastapi >= 0.93.0
    Jinja2 >= 3.1.2
    python-multipart >= 0.0.6
    pymongo >= 4.3.3
    PyJWT >= 2.6.0
    passlib >= 1.7.4
    python-dotenv >= 1.0.0
    pydantic >= 1.10.6
    pydantic[email] >= 1.10.6
    bcrypt >= 4.0.1
    torch >= 1.13.1
    torchvision >= 0.14.1
python_requires = >=3.10
package_dir =
    app = src/app
    controllers = src/app/controllers
    models = src/app/models
    config = src/app/config
    MachineLearning = src/MachineLearning
zip_safe = False

[option.extra_require]
testing = 
    pytest >= 6.2.5
    pytest-cov >= 3.0.0
    pytest-html >= 3.1.1
    mypy >= 0.910
    flake8 >= 4.0.1
    tox >= 3.24.4
    autopep8 >= 1.6.0

[options.package_data]
* = py.typed

[flake8]
max-line-length = 160
exclude = .*, __*

[tool.autopep8]
max_line_length = 160
